--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,1 +1,20 @@
-<h1>Dashboard</h1>
+<div class="admin-title">
+    <h2>Post</h2>
+    <a href="/admin/add-post" class="button">+ Add new</a>
+</div>
+<ul class="admin-post">
+    <% data.forEach(post =>{ %>
+        <li>
+            <a href="/post/<%= post._id %>">
+                <%= post.title  %> &nearr;
+            </a>
+            <div class="admin-post-controls">
+                <a href="/admin/edit-post/<%= post._id %>" class="btn">Edit</a>
+                <form action="/admin/delete-post/<%= post._id %>?_method=DELETE" method="POST">
+                    <input type="submit" value="Delete" class="btn btn-delete">
+                </form>
+            </div>
+
+        </li>
+    <% }) %>
+</ul>
